--- a/trabalhoP1/plc17TP1Gr14.tex
+++ b/trabalhoP1/plc17TP1Gr14.tex
@@ -83,15 +83,15 @@
 
 \begin{abstract}
 Este trabalho foca os conceitos básicos do funcionamento GAWK e das expressões regulares utilizadas para descrever padrões.
-Neste relatório descrevemos as decisões tomadas e as dificuldades encontradas, bem como pequenos exemplos para que qualquer um que o leia perceba facilmente como funciona o nosso projeto.
+Neste relatório descrevemos as decisões tomadas e as dificuldades encontradas, bem como pequenos exemplos para qualquer um que o leia perceba facilmente como funciona o nosso projeto.
 \end{abstract}
 
 \tableofcontents
 
 \chapter{Introdução} \label{intro}
-Neste trabalho vamos filtrar vários ficheiros de internacionalização, utilizando expressões regulares e o sitema de filtragem de texto GAWK. Uma parte importante do sistema linux são as expressões regulares e a capacidade de procurar num input um determinado padrão, o que facilita muitas das operações.\\
-As expressões regulares são uma sequência de caracteres, sucinta e flexível, que identifica palavras ou pradrões de caracteres. Combinando-as com o sistema de filtragem, conseguimos extrair informações dos ficheiros POs que são documentos que contêm traduções de uma língua para outra.\\
-Este trabalho tem como objetivos aprofundar os conhecimento do GAWK, do sistema Linux e as suas ferramentas, bem como aprender melhor o funcionamento das exprexões regulares.
+Neste trabalho vamos filtrar vários ficheiros de internacionalização, utilizando expressões regulares e o sistema de filtragem de texto GAWK. Uma parte importante do sistema linux são as expressões regulares e a capacidade de procurar num input um determinado padrão, o que facilita muitas das operações.\\
+As expressões regulares são uma sequência de caracteres, sucinta e flexível, que identifica palavras ou padrões de caracteres. Combinando-as com o sistema de filtragem, conseguimos extrair informações dos ficheiros POs que são documentos que contêm traduções de uma língua para outra.\\
+Este trabalho tem como objetivos aprofundar os conhecimento do GAWK, do sistema Linux e as suas ferramentas, bem como aprender melhor o funcionamento das expressões regulares.
 
 %\section*{Estrutura do Relatório} \
 %explicar como está organizado o documento, referindo os capítulos existentes em~\cite{Pereira201635}
@@ -103,6 +103,8 @@ Este trabalho tem como objetivos aprofundar os conhecimento do GAWK, do sistema 
 %as conclusões e o trabalho futuro
 
 \chapter{Ficheiros de internacionalização} \label{fi}
+
+Usando a fórmula $ exe = (NGr $\%$ 5) + 1$ o nossso grupo ficou com a tarefa de realizar o exercício 2.5 do enunciado.\\ 
 
 \section{Descrição informal do problema}\
 É necessária um "script" que permita:
