--- a/trabalhoP2/plc17TP2Gr14.tex
+++ b/trabalhoP2/plc17TP2Gr14.tex
@@ -8,11 +8,13 @@
 \usepackage{hyperref}
 %\usepackage[latin1]{inputenc}
 %\usepackage{url}
+\usepackage{color}
 \usepackage{enumerate}
 \usepackage{alltt}
 \usepackage{fancyvrb}
 \usepackage{listings}
 \usepackage{amsmath}
+\DefineVerbatimEnvironment{code}{Verbatim}{fontsize=\footnotesize}
 %LISTING - GENERAL
 \lstset{
 	basicstyle=\small,
@@ -24,6 +26,7 @@
 	mathescape=true,
 	escapeinside={(*@}{@*)}
 	}
+
 
 %\lstset{ %
 %	language=Java,							% choose the language of the code
@@ -71,8 +74,7 @@
 %\def\resumo{\underline{Resumo}:\\ }
 
 
-\input{LPgeneralDefintions}
-\title{Flex}
+%\input{LPgeneralDefintions}
 \title{Processamento de Linguagens e Compiladores 3º ano\\ \textbf{Pré-processador para HTML}\\ TP2\\ Grupo 14}
 \author{Artur Queiroz\\ A77136 \and  Rafael Fernandes\\ A78242 \and Rafaela Pinho\\ A77293 }
 \date{\today}
@@ -82,16 +84,18 @@
 \maketitle
 
 \begin{abstract}
-Este trabalho foca os conceitos básicos do funcionamento GAWK e das expressões regulares utilizadas para descrever padrões.
-Neste relatório descrevemos as decisões tomadas e as dificuldades encontradas, bem como pequenos exemplos para qualquer um que o leia perceba facilmente como funciona o nosso projeto.
+Neste relatório será apresentado as ideias implementadas para criar um pré-processador de HTML através da ferramenta $Flex$. 
+Também descrevemos as decisões tomadas e as dificuldades encontradas, bem como pequenos exemplos deforma que qualquer pessoa que leia este relatório perceba facilmente como funciona o nosso projeto.
 \end{abstract}
 
 \tableofcontents
 
 \chapter{Introdução} \label{intro}
-Neste trabalho vamos filtrar vários ficheiros de internacionalização, utilizando expressões regulares e o sistema de filtragem de texto GAWK. Uma parte importante do sistema linux são as expressões regulares e a capacidade de procurar num input um determinado padrão, o que facilita muitas das operações.\\
-As expressões regulares são uma sequência de caracteres, sucinta e flexível, que identifica palavras ou padrões de caracteres. Combinando-as com o sistema de filtragem, conseguimos extrair informações dos ficheiros POs que são documentos que contêm traduções de uma língua para outra.\\
-Este trabalho tem como objetivos aprofundar os conhecimento do GAWK, do sistema Linux e as suas ferramentas, bem como aprender melhor o funcionamento das expressões regulares.
+Escrever um documento em HTML trona-se muito cansativo, devido ao peso das "tags" que são inseridas para anotar o texto. Por exemplo, para colocar alguma coisa em negrito é necessário fazer:$ <b>(texto que queremos a negrito)</b>$. \\ 
+
+Por isso existem pré-processadores de HTML que facilitam a tarefa da inserção dessas "tags", pois permitem ao utilizador usar anotações mais leves e mais simples. Depois, o pré-processador substitui a notação abreviada para a notação de HTML.\\ 
+
+No nosso trabalho construímos um pré-processador que ajuda a simplificar a escrita do código HTML. 
 
 %\section*{Estrutura do Relatório} \
 %explicar como está organizado o documento, referindo os capítulos existentes em~\cite{Pereira201635}
@@ -102,76 +106,183 @@ Este trabalho tem como objetivos aprofundar os conhecimento do GAWK, do sistema 
 %No capítulo~\ref{concl} termina-se o relatório com uma síntese do que foi dito,
 %as conclusões e o trabalho futuro
 
-\chapter{Ficheiros de internacionalização} \label{fi}
-
-Usando a fórmula $ exe = (NGr $\%$ 5) + 1$ o nossso grupo ficou com a tarefa de realizar o exercício 2.5 do enunciado.\\ 
-
+\chapter{Pré-Processador} \label{fi}
 \section{Descrição informal do problema}\
-É necessária um "script" que permita:
-\begin{enumerate}[a)]
-\item Analisar vários ficheiros de formato PO, e devolver o número de traduções
-e os seus tradutores, bem como alguns metadados que acharmos relevantes.
-\item Através de ficheiros PO's criar dicionários de triangulação de Português
-para Francês.
-\item Reformatar ficheiros de formato PO para \LaTeX.
+Neste trabalho é necessário:
+\begin{enumerate}[i)]
+\item Criar marcas menos pesadas que são inseridas para anotar o texto.
+\item Através do Flex construímos o processador. (ficheiro flex é o processador)
+\item Passar um ficheiro através do processador para $HTML$.
 \end{enumerate}
 
 \section{Especificação dos requisitos}
-Os requisitos mínimos deste tarbalho são saber utilizar Linux, bash e GAWK.
 
-\chapter{Conceção / desenho da resolução}
-\section{Algoritmos}
-Utilizamos as seguintes expressões regulares:
+Para este trabalho foi necessário encontrar símbolos que facilitassem a escrita ao utilizador e que não interferisse na passagem para HTML. 
+
+  
+\section{Expressões regulares} 
+
+As expressões regulares usadas foram:
 
 \begin{enumerate}[i)]
-\item /\^{}msgid/
-\item /\^{}"Language:/
-\item /\textless.*@.*\textgreater/ \&\& !/\^{}"Report/ \&\& !/FIRST/ \&\& !/\^{}"Language/
-\item /\^{}"Language-Team: *$\backslash$n"/
-\item /\^{}"Language-Team:/
-\item /portugu[êe]se?s?/
-\item /\^{}msgid[ $\backslash$t]*""/
-\item /\^{}msgstr[ $\backslash$t]*""/
-\item /\^{}msgid *"/
-\item /\^{}msgstr *"/
+\item $ [bui]< | h[1-6]< $
+\item $ [ou]l$$\backslash$$[$
+\item $ dl$$\backslash$$\{$
+\item $ .|$$\backslash$n
+\item " $\backslash\backslash$ "
+
 \end{enumerate}
 
 \chapter{Codificação e Testes}
 \section{Problemas de implementação, Decisões e Alternativas}
 \subsection{Problemas de implementação}
-De um modo geral no trabalho, tivemos problemas com a formatação de alguns ficheiros, devido a não se encontrarem na formatação prevista, e com o \LaTeX.
+
+De um modo geral, não tivemos muitos problemas de implementação. Simplesmente tivemos que alterar o símbolo para abrir e fechar as listas e os dicionários, pois da forma que implementamos o array, se elas tivessem todas o mesmo símbolo não sabíamos qual das "tags" estávamos a fechar.    
+
+
 \subsection{Decisões}
-No problema 1 proposto no exercício 2.5, decidimos ignorar os "msgid" que não contivessem nenhuma mensagem ou que contivessem mais de uma tradução. Escolhemos como metadados mais importantes a linguagem, a percentagem de blocos, a quantidade de blocos por ficheiro, e quantos e quem são os tradutores. Decidimos também que a linguagem só está no "Language".\\
-No problema 2 decidimos utilizar a "Language-team" para definir a linguagem de tradução, pois nenhum dos ficheiros apresentava linguagem no campo "Language". Usamos uma matriz descritiva, sendo as linhas a frase em inglês e os descritivos das colunas a linguagem portuguesa ou francesa. Assumimos que os ficheiros apenas contêm traduções de português e francês e imprimimos unicamente aqueles que têm tradução nas duas linguas.\\
-No último problema ignoramos o "$\backslash n$" e o "\#" devido ao \LaTeX, substituindo-os por "$ $"(espaço) e por "$--$", respetivamente.
+Como já foi dito no capítulo 2, neste trabalho tivemos de escolher algumas marcas menos pesadas.\\ 
+Para abreviar a escrita de formatação usamos: 
+
+\begin{enumerate}[1-] 
+
+\item Negrito: $\backslash$$b$$<texto>$ 
+
+\item Itálico: $\backslash$$i$$<texto>$ 
+
+\item Sublinhado: $\backslash$$u$$<texto>$ 
+
+\item Níveis de títulos: $\backslash$$h[1-6]$$<texto>$ 
+
+\item Listas não numeradas: $\backslash$$ul$$[item | item|... ]$ 
+
+\item Listas numeradas: $\backslash$$ol$$[item | item|... ]$ 
+
+\item Dicionário: $\backslash$$dl$ $\{$ \\ 
+palavra: definição $\$$\\ 
+palavra: definição $\$$\\ 
+......\\ 
+$\}$
+
+\end{enumerate}
+Caso alguém queira utilizar algum dos símbolos, mas não usar a sua formatação, basta acrescentar um $\backslash$ 
+antes dos símbolos. Por exemplo escrever a expressão matemática "$3>1$" em negrito, basta fazer  " $\backslash$$b$$<3$$\backslash$$>1>$" 
+
 \subsection{Alternativas}
-Uma alternativa seria modificar os ficheiros manualmente de modo a estarem no formato certo. Outra alternativa seria fazer inúmeros casos especiais.
+
+Uma alternativa seria construir uma gramática e usar a ferramenta $yacc$ em conjunto com o $Flex$.\\
+Outra alternativa era modificar a implementação do pré-processador para identificar outros símbolos.
 
 \section{Testes realizados e Resultados}
-Mostram-se a seguir alguns testes feitos e os respectivos resultados:
 
+Criamos um ficheiro txt com as nossas anotações mais leves. (Figura A.1). Depois através do ficheiro makefile, compilamos o nosso ficheiro em $Flex$ e passamos ao executável o ficheiro txt (Figura A.2 e A.3).\\ 
+Como resultado obtemos um ficheiro já com as anotações do HTML. (Figura A.4 e A.5) 
 
-%\begin{figure}[h]
-%\centering
-%\includegraphics[width=9cm,height= 9cm]{exercicio2.png}
-%\caption{Exercicio 2}
-%\label{Exercicio 2}
-%\end{figure}
 
 
 \chapter{Conclusão} \label{concl}
-Com este trabalho concluimos que as expressões regulares são excelentes para procurar certos padrões em vários ficheiros simultaneamente.
-Para além disso, este trabalho permitiu a familiarização com o \LaTeX, que até então não era uma ferramenta utilizada regularmente.\\
-Como perspetiva futura, e como mencionado anteriormente, sugerimos a alteração dos ficheiros que não estão com o formato correto, de modo a não conterem "lixo" no resultado da nossa procura.\\
-Esta opção seria a mais sensata, dado que criar casos especiais para esses ficheiros é um procedimento mais complexo e tedioso.
+
+Hoje em dia já existem muitos pré-processadores que facilitam a escrita de documentos em HTML.\\
+Tendo em conta os aspetos apresentados ao longo do relatório, conclui-se que o $Flex$ é uma boa ferramenta para fazer o pré-processador e que com ele se torna fácil programar usando expressões regulares e um pouco de linguagem C. 
+%Tinhamos pensado usar o $flex$ e o $yacc$ em conjunto, mas usar só o $flex$ mostrou como através de "estados"
 
 
 
-%\appendix
-\chapter{Código do Programa}
+\appendix
+\chapter{Figuras}
+\begin{figure}[h]
+\centering
+\includegraphics[width=10cm,height= 8cm]{exemplo1.png}
+\caption{Exemplo com as "tags" simplificadas}
+\label{Exemplo 1}
+\end{figure}
+\begin{figure}[h]
+\centering
+\includegraphics[width=9cm,height= 5cm]{makefile.png}
+\caption{Ficheiro makefile}
+\label{makefile}
+\end{figure}
+\begin{figure}[h]
+\centering
+\includegraphics[width=15cm,height= 3cm]{terminal.png}
+\caption{Terminal}
+\label{Terminal}
+\end{figure}
+\begin{figure}[h]
+\centering
+\includegraphics[width=12cm,height= 10cm]{exemplo1html.png}
+\caption{Exemplo 1 depois do pré-processador}
+\label{Ficheiro em HTML}
+\end{figure}
+\begin{figure}[h]
+\centering
+\includegraphics[width=9cm,height= 9cm]{HTML.png}
+\caption{Exemplo HTML}
+\label{HTML}
+\end{figure}
 
-O exercíco 2.5 a) está resolvido no ficheiro ex.\\
-O exercíco 2.5 b) está resolvido no ficheiro ex2.\\
-O exercíco 2.5 c) está resolvido no ficheiro ex3.\\
+
+\chapter{Código do Pré-Processador}
+
+\begin{code}
+%{
+/* Declaracoes C diversas */
+#include <stdio.h>
+#include <stdlib.h>
+#include <string.h>
+#define Max 128
+
+int n = 0;
+char st[Max][32] = {0};
+FILE* f;
+
+void insere(char *id ){
+	int i;
+	for (i=0; id[i]!='\0'; i++){
+		st[n][i] = id[i];
+	}
+	st[n][i-1] = '\0';
+}
+
+%}
+
+%option noyywrap
+
+%x TEXT SIMB
+
+%%
+
+			{BEGIN TEXT;}
+
+<TEXT>{
+	">"		{fprintf(f, "</%s>", st[--n] );}
+	"]"		{fprintf(f, "</li></%s>", st[--n]);}
+	"|"		{fprintf(f,"</li>\n<li>");}
+	"}"		{fprintf(f, "</dd></%s>", st[--n]);}
+	"$"		{fprintf(f,"</dd>\n<dt>");}
+	":"		{fprintf(f,"</dt>\n<dd>");}
+	"\\"		{BEGIN SIMB; strcpy(st[n],"");}
+	.|\n		{fprintf(f, "%s", yytext );}
+}
+
+<SIMB>{
+	[bui]<|h[1-6]< 	{BEGIN TEXT; insere(yytext); fprintf(f, "<%s>", st[n++] ); }
+	[ou]l\[ 	{BEGIN TEXT; insere(yytext); fprintf(f, "<%s><li>", st[n++] );}
+	dl\{ 		{BEGIN TEXT; insere(yytext); fprintf(f, "<%s><dt>", st[n++] );}
+	.|\n		{BEGIN TEXT; fprintf(f,"%s",yytext);}
+}
+
+%%
+
+int main(){
+	f=fopen("ex.html", "w");
+	yylex(); 
+	fclose(f);
+	return 0; 
+}
+
+
+\end{code}
+
 
 \end{document}
