--- a/trabalhoP3/PLC17TP3GR14tex.tex
+++ b/trabalhoP3/PLC17TP3GR14tex.tex
@@ -229,7 +229,7 @@ A nossa linguagem está definida pela seguinte GIC:
 \indent
 Como em todos os trabalhos tivemos alguns contratempos, dos quais muitos foram superados.\\
 \indent
-Quando estavamos a passar a nossa linguagem para uma gramática tradutora tivemos alguns prblemas os   
+Quando estavamos a passar a nossa linguagem para uma gramática tradutora tivemos alguns prblemas com o código assembly da máquina virtual, mas nada que não se resolvesse com um bocadinho de paciência e trabalho de grupo. Tivemos também problemas na implementação de vetores.   
    
 
 
@@ -269,11 +269,6 @@ Quando estavamos a passar a nossa linguagem para uma gramática tradutora tivemo
 	 
 	
 \end{enumerate}
-
-
-\subsection{Alternativas}
-
-
 
 \section{Testes realizados e Resultados}
 \subsection{Exemplos escritos na nossa linguagem}
@@ -741,7 +736,11 @@ Obtivemos o seguinte resultado:
 
 
 \chapter{Conclusão} \label{concl}
- 
+ \indent
+ Este trabalho abrangeu maior parte da matéria lecionada ao longo do semestre. Através do nosso conhecimento em GIC's e sobre o gerador Yacc e Flex criamos um compilador para converter a nossa linguagem em código assembly para a Máquina Virtual VM.\\
+ Não coseguimos acabar todas as tarefas propostas, o exemplo 5 e 6 não estão a funcionar devido aos vetores. Como referido no capítulo 3 tivemos dificuldades a implementar essa estrutura.\\
+ \indent
+ Como trabalho futuro gostaríamos de implementar os vetores e adicionar mais elementos à nossa linguagem. 
 
 \appendix
 \chapter{Imagens}
